<resources>
    <string name="app_name">Akacia Medical</string>
    <string name="action_ts">Terms  &amp; Conditions</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="practice_number_not_found">Practice Number not found. Would you like to contact MSQ Health and register your practice?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Let\'s create a profile</string>
    <string name="slide_2_desc">\n\n\nWe would really like to know who you are so we can better serve you.\n\nWe just have four questions that will better your experience of the app.</string>
    <string name="slide_3_title">Basic Profile Complete</string>
    <string name="slide_3_desc">And that\'s it! You can now enjoy the best in-app experience with MSQ Health</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="quantity">Please add a quantity</string>
    <string name="added_product_error">Please add a quantity</string>
    <string name="added_product_">Product added to cart</string>
    <string name="added_product_success">Successfully Added to Cart!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_listing_details">ListingDetailsActivity</string>
    <string name="large_text">
        About Akacia™ Medical\n\n"

        Akacia™ Medical (Pty) Ltd is dedicated to providing a comprehensive range of quality medical products to the healthcare industry specialising in urology, respiratory, surgical disposables and specialized emergency equipment.\n\n

        We manufacture, market and distribute medical and surgical equipment and related
        consumables. Our customers include hospitals, wholesalers and retail pharmacies. We
        also operate in niche market segments such as emergency medicine, critical care, anaesthesia
        and capital equipment. Additional focus areas include cardiology surgical devices and
        laparoscopic instrumentation. These speciality areas are marketed by a separate division,
        Akacia™ Surgical.
        \n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_featured_item_details">FeaturedItemDetails</string>
    <string name="message_sent_message"> <b>Thank You for contacting us!</b>
        \n\nOur dedicated team will get back to you shortly.</string>
    <string name="msq_slogan">"Want to learn more about our services?
        Please get in touch, we'd love to hear from you!"</string>
    <string name="empty_cart">Look at this shiny new trolley, just waiting to be filled.\n
        Start shopping now!</string>
    <string name="still_verifying">We\'re still verifying your details, you will receive an email in a
        short while once we have verified them to allow you to start placing orders. \n\n Thanks for your patients.</string>
    <string name="still_verifying_promo">We\'re still verifying your details, you will receive an email in a
        short while once we have verified them to allow you to start placing orders and viewing our promotions. \n\n Thanks for your patients.</string>
    <string name="welcome_msg">Akacia™ Medical manufactures, markets and distributes a wide range of medical and surgical equipment,
        and related consumables incorporating the brands of GRS and Hiline.</string>
    <string-array name="hasPractice">
        <item>---Select---</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="login">Sign in</string>
    <string name="browse_catalogue">Browse Catalogue</string>
    <string name="send_msg">Send Message</string>
    <string name="register">Register</string>
    <string name="about_akacia">About Akacia™ Medical</string>
    <string name="about_akacia_text">Akacia™ Medical (Pty) Ltd is dedicated to providing a comprehensive
        range of quality medical products to the healthcare industry specialising in urology, respiratory,
        surgical disposables and specialized emergency equipment.
        \n\nWe manufacture, market and distribute medical and surgical equipment and related consumables.
        Our customers include hospitals, wholesalers and retail pharmacies. We also operate in
        niche market segments such as emergency medicine, critical care, anaesthesia and capital equipment.
        Additional focus areas include cardiology surgical devices and laparoscopic instrumentation.
        These speciality areas are marketed by a separate division, Akacia™ Surgical.
    </string>
    <string name="about_akacia_mission">Mission Statement</string>
    <string name="about_akacia_mission_text">Akacia™ Medical Pty Ltd constantly strives to focus on quality in all our
        services and sustain business relationships through honesty, integrity and sound business ethics.
        Our objective is to act in partnership with healthcare organizations in the care and recovery of
        the patient by providing cost effective products, personalized service and superior technical knowledge and
        support. \n\nWe continually search for improvements, developments and the most technologically advanced
        product to suit the need of our partners as to provide the latest and most cost effective treatment available.</string>
    <string name="type_your_message_here_max_150">type your message here. (Max. 150)</string>
    <string name="no_promotions">Unfortunately the specials are not available yet. Keep checking again soon for more great Akacia Medical specials.</string>
    <string name="no_promotions_available">No Specials Available</string>
    <string name="no_user_large_text">Unfortunately as a guest user, you are not eligible to see, add to cart and place an order to specials. \n\nPlease login/register to enjoy great Akacia Medical services.</string>
    <string name="account_unverified_title">Account Unverified</string>
    <string name="guest_user">Guest User</string>
    <string name="done">Done</string>
    <string name="payment_error_msg">Something went wrong while trying to process your payment.
        This might be caused by wrong card details or insuffiecient funds. Please try again later. \n\nFor more enquiries please contact Akacia Medical (PTY) Ltd.\nTel: (010) 003 7900</string>
    <string name="payment_error">Payment Unsuccessful</string>
</resources>