<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/welcome_bg"
        android:layout_marginBottom="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_status"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_error" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--<TextView-->
            <!--android:text="Welcome Dr"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAlignment="center"-->
            <!--android:textAppearance=""/>-->

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/payment_error"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_payment_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_error_msg"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:layout_margin="16dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_payment"
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/toq_add_cart_btn"/>

    </LinearLayout>

</RelativeLayout>