<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        android:id="@+id/view2"
        app:cardCornerRadius="16dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:layout_marginBottom="40dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_sc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/akacia_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="GET IN TOUCH WITH US"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/msq_slogan"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/contactus_edittext_drawable"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top|left"
                android:hint="@string/type_your_message_here_max_150"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="6"
                android:maxLength="150"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:scrollbars="vertical"
                android:textAppearance="?android:textAppearanceSmall"/>

            <Button
                android:id="@+id/send_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/send_msg"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>